unpackaged/main/default/objects/ETST_Scheduled_Trips__c/ETST_Scheduled_Trips__c.object-meta.xml
<CustomObject>
    <label>Scheduled Trips</label>
    <nameField>
        <displayFormat>ST-{000000}</displayFormat>
        <label>Scheduled Trips Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Scheduled Trips</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>