unpackaged/main/default/objects/ETST_Scheduled_Trips__c/fields/ETST_Bus_Number__c.field-meta.xml
<CustomField>
    <fullName>ETST_Bus_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Bus Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>