unpackaged/main/default/objects/ETST_Scheduled_Trips__c/fields/ETST_Date__c.field-meta.xml
<CustomField>
    <fullName>ETST_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date</label>
    <type>Date</type>
</CustomField>