unpackaged/main/default/objects/ETST_Scheduled_Trips__c/fields/ETST_Direction__c.field-meta.xml
<CustomField>
    <fullName>ETST_Direction__c</fullName>
    <label>Direction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>School To Home</fullName>
            </value>
            <value>
                <fullName>Home To School</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>