unpackaged/main/default/objects/ETST_Scheduled_Trips__c/fields/ETST_Driver__c.field-meta.xml
<CustomField>
    <fullName>ETST_Driver__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Driver</label>
    <length>255</length>
    <type>Text</type>
</CustomField>