unpackaged/main/default/objects/ETST_Scheduled_Trips__c/fields/ETST_Schedule_drop_off_time__c.field-meta.xml
<CustomField>
    <fullName>ETST_Schedule_drop_off_time__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Schedule drop off time</label>
    <type>DateTime</type>
</CustomField>