unpackaged/main/default/objects/ETST_Scheduled_Trips__c/fields/ETST_Schedule_pickup_time__c.field-meta.xml
<CustomField>
    <fullName>ETST_Schedule_pickup_time__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Schedule pickup time</label>
    <type>DateTime</type>
</CustomField>