unpackaged/main/default/objects/ETST_Scheduled_Trips__c/fields/ETST_Student__c.field-meta.xml
<CustomField>
    <fullName>ETST_Student__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Student</label>
    <referenceTo>ETST_Student__c</referenceTo>
    <relationshipLabel>Scheduled Trips</relationshipLabel>
    <relationshipName>Scheduled_Trips</relationshipName>
    <type>Lookup</type>
</CustomField>